--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/clean-webpack-plugin": "^0.1.3",
     "@types/express": "^4.17.7",
     "@types/html-webpack-plugin": "^3.2.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
