--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/rere252/udacity-news-article-nlp#readme",
   "devDependencies": {
     "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/clean-webpack-plugin": "^0.1.3",
     "@types/express": "^4.17.7",
@@ -37,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.1.1",
     "eslint": "^7.5.0",
@@ -57,6 +59,9 @@
     "webpack-node-externals": "^2.5.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@abraham/reflection": "^0.7.0",
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "injection-js": "^2.3.1"
   }
 }
