--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "presets": ["@babel/preset-typescript"],
-  "plugins": ["babel-plugin-transform-typescript-metadata", ["@babel/plugin-proposal-decorators", { "legacy": true }]]
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
+  "plugins": [
+    "babel-plugin-transform-typescript-metadata",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
