--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   "homepage": "https://github.com/rere252/udacity-news-article-nlp#readme",
   "devDependencies": {
     "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/body-parser": "^1.19.0",
+    "@types/cheerio": "^0.22.21",
     "@types/clean-webpack-plugin": "^0.1.3",
     "@types/express": "^4.17.7",
     "@types/html-webpack-plugin": "^3.2.3",
@@ -61,7 +65,10 @@
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "injection-js": "^2.3.1"
+    "injection-js": "^2.3.1",
+    "node-html-parser": "^1.2.20"
   }
 }
