--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "run-s build-prod server-node",
     "start-dev": "run-p start-dev-client start-dev-server",
     "build-prod": "webpack --env=production",
     "start-dev-client": "webpack-dev-server --env=development-client",
     "start-dev-server": "run-p build-dev-server-webpack server-nodemon",
     "build-dev-server-webpack": "webpack --env=development-server --watch",
-    "server-nodemon": "nodemon ./dist/server/main.js"
+    "server-nodemon": "nodemon ./dist/server/main.js",
+    "server-node": "node ./dist/server/main.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +41,7 @@
     "@types/terser-webpack-plugin": "^3.0.0",
     "@types/webpack": "^4.41.21",
     "@types/webpack-dev-server": "^3.11.0",
+    "@types/workbox-webpack-plugin": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "^8.1.0",
@@ -60,7 +63,8 @@
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-node-externals": "^2.5.0"
+    "webpack-node-externals": "^2.5.0",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
@@ -69,6 +73,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "injection-js": "^2.3.1",
-    "node-html-parser": "^1.2.20"
+    "node-html-parser": "^1.2.20",
+    "sweetalert": "^2.1.2"
   }
 }
