--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "run-s build-prod server-node",
     "start-dev": "run-p start-dev-client start-dev-server",
     "build-prod": "webpack --env=production",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/rere252/udacity-news-article-nlp#readme",
   "devDependencies": {
+    "@abraham/reflection": "^0.7.0",
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
@@ -35,6 +36,7 @@
     "@types/clean-webpack-plugin": "^0.1.3",
     "@types/express": "^4.17.7",
     "@types/html-webpack-plugin": "^3.2.3",
+    "@types/jest": "^26.0.8",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.0.27",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -48,12 +50,19 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.1.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "eslint-loader": "^4.0.2",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
+    "injection-js": "^2.3.1",
+    "jest": "^26.2.2",
+    "jest-mock-axios": "^4.2.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-html-parser": "^1.2.20",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "reflect-metadata": "^0.1.13",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
@@ -67,13 +76,7 @@
     "workbox-webpack-plugin": "^5.1.3"
   },
   "dependencies": {
-    "@abraham/reflection": "^0.7.0",
     "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "injection-js": "^2.3.1",
-    "node-html-parser": "^1.2.20",
     "sweetalert": "^2.1.2"
   }
 }
